# rust-mcp-client

./: .gitignore  .npmignore  AGENTS.md  CLAUDE_DESKTOP_SETUP.md  Cargo.toml  LOGGING.md  README.md  package.json  test_mcp.sh
.github/workflows/: release.yml
docs/: MCP_PROTOCOL.md
scripts/: install.js
src/: lib.rs  main.rs  mcp.rs  server.rs
