[package]
name = "rust-mcp-client"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.9.0", features = ["server", "transport-io"] }
reqwest = { version = "0.12.26", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
schemars = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
