[package]
name = "rust-mcp-client"
version = "0.1.5"
edition = "2024"

[dependencies]
rmcp = { version = "0.9.0", features = ["server", "transport-io"] }
# 使用 rustls-tls 替代 default-tls，避免 OpenSSL 依赖，方便交叉编译
reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
schemars = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
